--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ bodyClass:
 ---
 
 
-{% extends "components/layouts/main.html" %}
+{% extends "components/layouts/" + main_html_template %}
 {% block content %}
 <!--<Deject>--><!--Start Code--><!--</Deject>-->
 
